Evaluations criterias have changed

--- a/index.html
+++ b/index.html
@@ -490,17 +490,17 @@
                                             </li>
                                             <li>Below evaluation criterias will be considered.
                                                 <ul>
-                                                    <li>Software development methodologies(Agile, Waterfall etc)
+                                                    <li>Software development methodologies(Ex: Agile, Waterfall etc)
                                                     </li>
-                                                    <li>UI Design/Wireframe(Adobe XD, Figma)</li>
-                                                    <li>Project Management tools(Jira, Trello, Clickup etc)</li>
+                                                    <li>UI Design/Wireframe(Ex: Adobe XD, Figma and etc)</li>
+                                                    <li>Project Management tools(Ex: Jira, Trello, Clickup and etc)</li>
                                                     <li>Development Frameworkss</li>
                                                     <li>Proper usage of libraries, ability to refer to the documentation
                                                     </li>
                                                     <li>Proper usage of StackOverflow</li>
-                                                    <li>Unit testing (Jest)</li>
-                                                    <li>Database handling(SQL, NoSQL)</li>
-                                                    <li>Version Controlling(Git, GitHub)</li>
+                                                    <li>Unit testing (Ex: Jest and etc)</li>
+                                                    <li>Database handling(Ex: SQL, NoSQL and etc)</li>
+                                                    <li>Version Controlling(Ex: Git, GitHub and etc)</li>
                                                     <li>Team collaboration</li>
                                                     <li>Writing clean code / Following Design Patterns</li>
                                                     <li>Communication Skills</li>
