Typo in Evaluation criterias

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                                                     </li>
                                                     <li>UI Design/Wireframe(Ex: Adobe XD, Figma and etc)</li>
                                                     <li>Project Management tools(Ex: Jira, Trello, Clickup and etc)</li>
-                                                    <li>Development Frameworkss</li>
+                                                    <li>Development Frameworks</li>
                                                     <li>Proper usage of libraries, ability to refer to the documentation
                                                     </li>
                                                     <li>Proper usage of StackOverflow</li>
